--- a/nginx.conf
+++ b/nginx.conf
@@ -1,35 +1,31 @@
-server {
-        listen 80;
-        listen [::]:80;
+#user  nobody;
+worker_processes  1;
 
-        root /var/www/html;
+events {
+    worker_connections  1024;
+}
 
-        # Add index.php to the list if you are using PHP
-        index index.html index.htm index.nginx-debian.html;
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
 
-        server_name ;
+    sendfile        on;
+
+    keepalive_timeout  30;
+
+    server {
+        listen       80;
+        server_name  localhost ec2-18-130-146-251.eu-west-2.compute.amazonaws.com;
 
         location / {
-                # First attempt to serve request as file, then
-                # as directory, then fall back to displaying a 404.
-                try_files $uri $uri/ =404;
+            root   html;
+            index  index.html index.htm;
+        }
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
         }
 
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #       include snippets/fastcgi-php.conf;
-        #
-        #       # With php7.0-cgi alone:
-        #       fastcgi_pass 127.0.0.1:9000;
-        #       # With php7.0-fpm:
-        #       fastcgi_pass unix:/run/php/php7.0-fpm.sock;
-        #}
+    }
 
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #       deny all;
-        #}
 }
